--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,16 +3,17 @@
 
 <head>
     <title>JCL Space Calculator</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
 <body>
     <h1>JCL Space Calculator</h1>
     <form action="/calculate" method="post">
         <label for="fileSize">File Size (in bytes):</label>
-        <input type="text" id="fileSize" name="fileSize" required><br><br>
+        <input type="number" id="fileSize" name="fileSize" min="0" required><br><br>
 
         <label for="blockingFactor">Blocking factor:</label>
-        <input type="text" id="blockingFactor" name="blockingFactor" required><br><br>
+        <input type="number" id="blockingFactor" name="blockingFactor" min="0" required><br><br>
 
         <button type="submit">Calculate Block Size</button>
     </form>
